Fix versions-modal comment spacing [SCI-8223]

--- a/app/assets/stylesheets/protocols/index.scss
+++ b/app/assets/stylesheets/protocols/index.scss
@@ -214,6 +214,7 @@
       display: flex;
       flex-wrap: nowrap;
       width: 100%;
+      align-items: center;
 
       .protocol-link {
         @include font-button;
@@ -277,6 +278,10 @@
       }
 
       .protocol-comment-container {
+        .sci-input-field {
+          margin-bottom: 8px;
+        }
+
         &[data-edit-mode="0"] {
           .edit-buttons {
             display: none;
